--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ release
 
 # Local config
 *.local
+*.note.md
 
 # Editor directories and files
 .vscode/*
@@ -29,3 +30,5 @@ release
 *.njsproj
 *.sln
 *.sw?
+
+/generated/prisma
