Refactor welcome page, add theme provider, update imports
Replaces the old welcome.page.tsx with a new WelcomePage component featuring improved UI, confetti animation, and password strength bar. Adds a ThemeProvider component for theme management. Updates all UI component imports to use relative paths. Removes Prisma database and migration files, indicating a move away from Prisma. Updates dependencies in package.json and package-lock.json to include new UI and utility libraries.

--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.16",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^7.9.1",
+    "react-use": "^17.6.0",
     "rxdb": "^16.19.0",
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.3.1"
