--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typeorm": "typeorm-ts-node-esm",
+    "migration:generate": "typeorm-ts-node-esm migration:generate -d electron/database/migration-data-source.ts",
+    "migration:create": "typeorm-ts-node-esm migration:create",
+    "migration:run": "typeorm-ts-node-esm migration:run -d electron/database/migration-data-source.ts",
+    "migration:revert": "typeorm-ts-node-esm migration:revert -d electron/database/migration-data-source.ts",
+    "migration:show": "typeorm-ts-node-esm migration:show -d electron/database/migration-data-source.ts"
   },
   "dependencies": {
     "@electron/remote": "^2.1.3",
@@ -56,7 +62,8 @@
     "prisma": "^6.16.2",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.2.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2",
     "vite": "^5.1.6",
     "vite-plugin-electron": "^0.28.6",
     "vite-plugin-electron-renderer": "^0.14.5"
