Implement secure user login with bcrypt hashing
Added bcrypt-based password hashing and verification for user authentication. Refactored login flow to use username instead of email, updated preload and global types, and moved type declarations to a dedicated file. Updated tsconfig to include custom types directory. UI and logic in the login form were adjusted to match the new authentication flow.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
 
+    /* Types */
+    "typeRoots": ["./node_modules/@types", "./types"],
+    "types": [],
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -28,6 +32,10 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src", "electron"],
+  "include": [
+    "src",
+    "electron",
+    "types"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
