--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.16",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
@@ -42,6 +43,7 @@
     "reflect-metadata": "^0.2.2",
     "rxdb": "^16.19.0",
     "rxjs": "^7.8.2",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "typeorm": "^0.3.27"
   },
