--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -36,11 +37,13 @@
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.16",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-confetti": "^6.4.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
     "react-password-strength-bar": "^0.4.1",
