--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,14 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # Keep npm dependencies updated (Electron, Vite, etc.)
+  - package-ecosystem: "npm"
+    directory: "/" # root where your package.json is
     schedule:
-      interval: "daily"
+      interval: "daily" # or "weekly" if you prefer fewer PRs
+    open-pull-requests-limit: 5
+
+  # Keep GitHub Actions (ci.yml, release.yml, codeql.yml) updated
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
